test_data/neg/ss/655292/Windows/655292.ss3_simp.rtf
>655292
MRRQRRSITDIICENCKYLPTKRSRNKRKPIPKESDVKTFNYTAHLWDIRWLRHRARNTR
CCCCCCCHHHHHHHHCCCCCCCCCCCCCCCCCCCCCCCCCCHHHHHHHHHHHHHHHHHCC
